added width for table

--- a/inst/extdata/knitr-report-template.Rhtml
+++ b/inst/extdata/knitr-report-template.Rhtml
@@ -17,6 +17,7 @@
          font-family: arial, sans-serif;
     }
     table, td, th {
+        width: 800px;
         font-family: monospace;
         border: 1px solid black;
         border-collapse: collapse;
